@@ -1,25 +1,30 @@
 import sbt._
 import Keys._
-import play.Project._
+import play.sbt.PlayScala
+import play.sbt.PlayImport._
 
 object GeolatteNoSqlBuild extends Build {
 
   val appName = "geolatte-nosql"
-  val appVersion = "1.2-SNAPSHOT"
+  val appVersion = "2.0-SNAPSHOT"
 
   //Resolvers
   lazy val commonResolvers = Seq(
     "Local Maven Repository" at Path.userHome.asFile.toURI.toURL + "/.m2/repository",
-    "Codahale Repo" at "http://repo.codahale.com",
+    "Kamon Repository Snapshots" at "http://snapshots.kamon.io",
     "Sonatype Repo" at "https://oss.sonatype.org/content/repositories/releases/",
     "Sonatype Snapshots" at "http://oss.sonatype.org/content/repositories/snapshots/",
     "Typesafe Repository" at "http://repo.typesafe.com/typesafe/releases/",
     "sbt-idea-repo" at "http://mpeltonen.github.com/maven/",
-    Resolver.url("artifactory", url("http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases"))(Resolver.ivyStylePatterns)
+    "scalaz-bintray" at "https://dl.bintray.com/scalaz/releases",
+      Resolver.url( "artifactory", url( "http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases" ) )(
+      Resolver
+        .ivyStylePatterns
+    )
   )
 
   lazy val coreDependencies = Seq(
-    "org.geolatte" % "geolatte-geom" %  "0.14",
+    "org.geolatte" % "geolatte-geom" % "0.14",
     "commons-codec" % "commons-codec" % "1.8",
     "net.sf.supercsv" % "super-csv" % "2.1.0",
     "org.parboiled" %% "parboiled" % "2.0.1",
@@ -27,16 +32,28 @@ object GeolatteNoSqlBuild extends Build {
   )
 
   lazy val mongoDependencies = Seq(
-    "org.reactivemongo" %% "reactivemongo" % "0.10.0",
-    "org.reactivemongo" %% "play2-reactivemongo" % "0.10.2"
+    "org.reactivemongo" %% "reactivemongo" % "0.11.9",
+    "org.reactivemongo" %% "play2-reactivemongo" % "0.11.7.play24",
+    "org.reactivemongo" %% "reactivemongo-play-json" % "0.11.9"
   )
 
   lazy val psqlDependencies = Seq(
-    "com.github.mauricio" %% "postgresql-async" % "0.2.15"
+    "com.github.mauricio" %% "postgresql-async" % "0.2.18"
+  )
+
+  val kamonVersion = "0.6.0-a9d5c5c61f7e5e189bf67baee2b13e21ebbaaf73" //sort-of snapshot release
+
+  lazy val kamonDependencies = Seq(
+    "io.kamon" %% "kamon-core" % kamonVersion,
+    "io.kamon" %% "kamon-jmx" % kamonVersion,
+    "io.kamon" %% "kamon-log-reporter" % kamonVersion
+//    ,
+//    "io.kamon" %% "kamon-system-metrics" % kamonVersion
   )
 
   lazy val testDependencies = Seq(
-    "org.specs2" %% "specs2" % "2.4.1" % "test"
+//    "org.specs2" %% "specs2" % "2.4.1" % "test"
+    specs2 % Test
   )
 
 
@@ -44,44 +61,49 @@ object GeolatteNoSqlBuild extends Build {
   lazy val dependencies = coreDependencies ++
     mongoDependencies ++
     psqlDependencies ++
+    kamonDependencies ++
     testDependencies
 
   //Build Settings applied to all projects
   lazy val commonBuildSettings = Seq(
+    name := appName,
+    version := appVersion,
     organization := "org.geolatte.nosql",
-    scalaVersion := "2.10.4",
-    scalacOptions ++= Seq("-feature", "-language:postfixOps", "-language:implicitConversions"),
+    scalaVersion := "2.11.7",
+    scalacOptions ++= Seq( "-feature", "-language:postfixOps", "-language:implicitConversions" ),
     resolvers ++= commonResolvers
   )
 
-  lazy val ItTest = config("integration") extend Test
+  lazy val ItTest = config( "integration" ) extend Test
 
   def itFilter(name: String): Boolean = name startsWith "integration"
-  def unitFilter(name: String): Boolean = !itFilter(name)
+
+  def unitFilter(name: String): Boolean = !itFilter( name )
 
   //Settings applied to all projects
   lazy val defaultSettings =
     commonBuildSettings ++
       Seq(
         libraryDependencies ++= dependencies,
-        javaOptions in(Test, run) += "-XX:MaxPermSize=128m -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005",
-        javacOptions ++= Seq("-source", "1.6", "-target", "1.6")
+        Keys.fork in run := true,
+        javaOptions in(Test, run) += "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005",
+        javacOptions ++= Seq( "-source", "1.8", "-target", "1.8" )
       )
 
   //Options for running tests
   val testSettings = Seq(
     Keys.fork in Test := false, //Fork a new JVM for running tests
-    testOptions in Test := Seq(Tests.Filter(unitFilter)),
+    testOptions in Test := Seq( Tests.Filter( unitFilter ) ),
     parallelExecution in ItTest := false,
-    testOptions in ItTest := Seq(Tests.Argument("sequential"), Tests.Filter(itFilter))
+    testOptions in ItTest := Seq( Tests.Argument( "sequential" ), Tests.Filter( itFilter ) )
   )
 
-  val main = play.Project(
-    appName,
-    appVersion,
-    dependencies = dependencies
-  ).configs(ItTest)
-    .settings(inConfig(ItTest)(Defaults.testTasks): _*)
-    .settings((defaultSettings ++ testSettings): _*)
+  val main = (project in file("."))
+    .settings(
+    defaultSettings:_*
+  ).configs( ItTest )
+    .settings( inConfig( ItTest )( Defaults.testTasks ): _* )
+    .settings( (defaultSettings ++ testSettings): _* )
+    .enablePlugins(PlayScala)
 
 }
